--- a/biosketch.tex
+++ b/biosketch.tex
@@ -4,22 +4,23 @@ early elementary school, and participated in mathematics competitions until the
 end of high school.
 
 In 2008, Kun moved to Newmarket, Ontario, Canada and attended Sir William Mulock
-Secondary School. He spent the next two years learning the language and culture
-here.
+Secondary School. He spent the next two years learning the new language and
+culture.
 
-After graduation, Kun joined University of California, Los Angeles in 2010 to
-study applied mathematics. During the summers of 2012 and 2013, he participated
-in the UCLA Applied Math REU program working on dynamical system and crime
-modeling. He received tremendous help and encouragement on his way to
+After graduation, Kun attended the University of California, Los Angeles in 2010
+to study applied mathematics. During the summers of 2012 and 2013, he
+participated in the UCLA Applied Math REU program to work on dynamical system
+and crime modeling. He received tremendous help and encouragement on his way to
 graduate school from his REU mentors, Scott McCalla and James von Brecht. In
 2014, Kun completed the departmental scholar program in mathematics, earning his
-B.S. and M.A. concurrently. He graduated with the departmental highest
-honor in applied mathematics and the Daus memorial award.
+B.S. and M.A. concurrently. He graduated Summa Cum Laude, receiving the
+departmental highest honor in applied mathematics and the Daus memorial award
+for his achievement in mathematics as an undergraduate.
 
-In 2014, Kun is admitted to the Ph.D. program at Center for Applied Mathematics
+In 2014, Kun was admitted to the Ph.D. program at Center for Applied Mathematics
 in Cornell University. He soon started working with Professor David Bindel, who
 later became his advisor. During the summer of 2017, he interned at the Lawrence
 Berkeley National Laboratory, where he worked under the mentorship of Professor
-Lin Lin. For the last three years at Cornell, he is partially supported by a
+Lin Lin. For the last three years at Cornell, he was partially supported by a
 National Science Foundation grant. In September 2019, Kun will move to Seattle
 and become a research scientist at Facebook, Inc.
