--- a/Thesis.tex
+++ b/Thesis.tex
@@ -34,22 +34,29 @@
 % Others
 \usepackage{accents} 
 \usepackage{bm}
+\usepackage{booktabs}
 \usepackage[format=hang]{caption}
+\usepackage{colortbl}
 \usepackage{enumitem}
+\usepackage[OT1]{fontenc}
 \usepackage{hyphenat}
 \usepackage{lineno}
 \usepackage{moreverb}
-\usepackage{nicefrac} 
-\usepackage{txfonts}
+\usepackage{multirow} 
+\usepackage{nicefrac}
+\usepackage[refpage,intoc]{nomencl}
 \usepackage{palatino}
 \usepackage{placeins}
-\usepackage{url}  
-\usepackage{multirow} 
-\usepackage[OT1]{fontenc}
-\usepackage[refpage,intoc]{nomencl}
+\usepackage{siunitx}
+\usepackage{threeparttable}
+\usepackage{txfonts}
+\usepackage{url}
+\usepackage{xcolor}
 \usepackage[pageanchor, hidelinks]{hyperref}
 \def\pagedeclaration#1{\dotfill\hyperlink{page.#1}{Page\nobreakspace#1}}
 \setlength{\nomitemsep}{-\parsep}
+
+\definecolor{lightgray}{rgb}{0.83, 0.83, 0.83}
 
 %if you're having problems with overfull boxes, you may need to increase
 %the tolerance to 9999
