--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,5 @@
 % Chapter 4
+
 @inproceedings{AGM,
   author = {S. Arora and R. Ge and A. Moitra},
   title = {Learning topic models \--- Going Beyond {SVD}},
@@ -256,4 +257,477 @@ journal = {Bayesian Stat.}
 	journal = {Foundations and Trends in Machine Learning}, 
 	pages = {1--305}, 
 	year = {2008},
+}
+
+% Chapter 5
+
+@Article{AquilantePedersenLindh2007,
+  author  = {Aquilante, F. and Pedersen, T. B. and Lindh, R.},
+  title   = {{Low-cost evaluation of the exchange Fock matrix from Cholesky and density fitting representations of the electron repulsion integrals}},
+  journal = {J. Chem. Phys.},
+  year    = {2007},
+  volume  = {126},
+  pages   = {194106},
+}
+
+@inproceedings{arthur2006slow,
+  title={How slow is the k-means method?},
+  author={Arthur, David and Vassilvitskii, Sergei},
+  booktitle={Proceedings of the twenty-second annual symposium on Computational geometry},
+  pages={144--153},
+  year={2006},
+  organization={ACM}
+}
+
+@inproceedings{arthur2007k,
+  title={k-means++: The advantages of careful seeding},
+  author={Arthur, David and Vassilvitskii, Sergei},
+  booktitle={Proceedings of the eighteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={1027--1035},
+  year={2007},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
+@article{aurenhammer1991voronoi,
+  title={Voronoi diagrams—a survey of a fundamental geometric data structure},
+  author={Aurenhammer, Franz},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={23},
+  number={3},
+  pages={345--405},
+  year={1991},
+  publisher={ACM}
+}
+
+@article{becke1988multicenter,
+  title={A multicenter numerical integration scheme for polyatomic molecules},
+  author={Becke, Axel D},
+  journal={The Journal of chemical physics},
+  volume={88},
+  number={4},
+  pages={2547--2553},
+  year={1988},
+  publisher={AIP}
+}
+
+@Article{BeebeLinderberg1977,
+  author  = {N. H. F. Beebe and J. Linderberg},
+  title   = {Simplifications in the generation and transformation of two-electron integrals in molecular calculations},
+  journal = {Int. J. Quantum Chem.},
+  year    = {1977},
+  volume  = {12},
+  pages   = {683},
+}
+
+@Article{CP_356_98_2009,
+  author  = {Frank Neese and Frank Wennmohs and Andreas Hansen and Ute Becker},
+  title   = {Efficient, approximate and parallel Hartree–Fock and hybrid DFT calculations. A ``chain-of-spheres'' algorithm for the Hartree–Fock exchange},
+  journal = {Chem. Phys.},
+  year    = {2009},
+  volume  = {356},
+  pages   = {98--109},
+}
+
+@article{du2006centroidal,
+  title={Centroidal Voronoi tessellation algorithms for image compression, segmentation, and multichannel restoration},
+  author={Du, Qiang and Gunzburger, Max and Ju, Lili and Wang, Xiaoqiang},
+  journal={Journal of Mathematical Imaging and Vision},
+  volume={24},
+  number={2},
+  pages={177--194},
+  year={2006},
+  publisher={Springer}
+}
+
+@book{gibbs2014elementary,
+  title={Elementary principles in statistical mechanics},
+  author={Gibbs, J Willard},
+  year={2014},
+  publisher={Courier Corporation}
+}
+
+@ARTICLE{Goedecker1999,
+  author = {Goedecker, S.},
+  title = {{Linear scaling electronic structure methods}},
+  journal = {Rev. Mod. Phys.},
+  year = {1999},
+  volume = {71},
+  pages = {1085--1123}
+}
+
+@BOOK{GolubVan2013,
+  title = {Matrix computations},
+  publisher = {Johns Hopkins Univ. Press},
+  year = {2013},
+  author = {Golub, G. H. and Van Loan, C. F.},
+  address = {Baltimore},
+  edition = {Fourth}
+}
+
+@ARTICLE{GuidonHutterVandevondele2010,
+  author = {Guidon, M. and Hutter, J. and Vandevondele, J.},
+  title = {{Auxiliary density matrix methods for Hartree-Fock exchange calculations}},
+  journal = {J. Chem. Theory Comput.},
+  year = {2010},
+  volume = {6},
+  pages = {2348--2364}
+}
+
+@ARTICLE{JCC_27_1787_2006_Grimme,
+  author = {S. Grimme},
+  title = {Semiempirical {GGA-type} Density Functional Constructed with a Long-Range
+  Dispersion Correction},
+  journal = {J. Comput. Chem.},
+  year = {2006},
+  volume = {27},
+  pages = {1787-1799},
+  number = {15},
+  doi = {10.1002/jcc.20495}
+}
+
+@ARTICLE{JCP_81_511_1984_Nose,
+  author = {S. Nos\'{e}},
+  title = {A Unified Formulation of the Constant Temperature Molecular Dynamics
+  Methods},
+  journal = {J. Chem. Phys.},
+  year = {1984},
+  volume = {81},
+  pages = {511},
+  doi = {10.1063/1.447334}
+}
+
+@ARTICLE{JCP_124_219906_2006_HSE06,
+  author = {J. Heyd and G. E. Scuseria and M. Ernzerhof},
+  title = {Erratum: "Hybrid functionals based on a screened Coulomb potential"
+  [{J. Chem. Phys.} 118, 8207 (2003)]},
+  journal = {J. Chem. Phys.},
+  year = {2006},
+  volume = {124},
+  pages = {219906},
+  doi = {10.1063/1.2204597}
+}
+
+@ARTICLE{JCP_141_084502_2014,
+  author = {DiStasio, R. A. and Santra, B. and Li, Z. and Wu, X. and Car, R.},
+  title = {The individual and collective effects of exact exchange and dispersion
+  interactions on the ab initio structure of liquid water},
+  journal = {J. Chem. Phys.},
+  year = {2014},
+  volume = {141},
+  pages = {084502}
+}
+
+@ARTICLE{JCP_143_124110_2015_DGDFT,
+  author = {W. Hu and L. Lin and C. Yang},
+  title = {{DGDFT}: A Massively Parallel Method for Large Scale Density Functional
+  Theory Calculations},
+  journal = {J. Chem. Phys.},
+  year = {2015},
+  volume = {143},
+  pages = {124110},
+  number = {12},
+  doi = {10.1063/1.4931732}
+}
+
+@ARTICLE{JCP_145_154101_2016_DGDFT,
+  author = {A. S. Banerjee and L. Lin and W. Hu and C. Yang and J. E. Pask},
+  title = {Chebyshev Polynomial Filtered Subspace Iteration in the Discontinuous Galerkin Method for Large-Scale Electronic Structure Calculations},
+  journal = {J. Chem. Phys.},
+  year = {2016},
+  volume = {145},
+  pages = {154101},
+  number = {},
+  doi = {}
+}
+
+@ARTICLE{JCP_231_2140_2012_DGDFT,
+  author = {L. Lin and J. Lu and L. Ying and W. E},
+  title = {Adaptive Local Basis Set for Kohn-Sham Density Functional Theory
+  in a Discontinuous Galerkin Framework I: Total Energy Calculation},
+  journal = {J. Comput. Phys.},
+  year = {2012},
+  volume = {231},
+  pages = {2140-2154},
+  number = {4},
+  doi = {10.1016/j.jcp.2011.11.032}
+}
+
+@ARTICLE{JCP_302_329_2015_ISDF,
+  author = {J. Lu and L. Ying},
+  title = {Compression of the Electron Repulsion Integral Tensor in Tensor Hypercontraction Format with Cubic Scaling Cost},
+  journal = {J. Comput. Phys.},
+  year = {2015},
+  volume = {302},
+  pages = {329--335},
+  doi = {10.1016/j.jcp.2015.09.014}
+}
+
+@ARTICLE{JCP_335_426_2017_DGDFT,
+  author = {G. Zhang and L. Lin and W. Hu and C. Yang and J. E. Pask},
+  title = {Adaptive Local Basis Set for {Kohn–Sham} Density Functional Theory in a Discontinuous {Galerkin} Framework II: Force, Vibration, and Molecular Dynamics Calculations},
+  journal = {J. Comput. Phys.},
+  year = {2017},
+  volume = {335},
+  pages = {426--443},
+  number = {},
+  doi = {}
+}
+
+@ARTICLE{JCTC_11_4655_2015,
+  author = {William Dawson and François Gygi},
+  title = {Performance and Accuracy of Recursive Subspace Bisection for Hybrid
+  DFT Calculations in Inhomogeneous Systems},
+  journal = {J. Chem. Theory Comput.},
+  year = {2013},
+  volume = {11},
+  pages = {4655--4663},
+  number = {10},
+  doi = {10.1021/acs.jctc.5b00826}
+}
+
+@ARTICLE{JCTC_12_2242_2016_ACE,
+  author = {Lin Lin},
+  title = {Adaptively Compressed Exchange Operator},
+  journal = {J. Chem. Theory Comput.},
+  year = {2016},
+  volume = {12},
+  pages = {2242--2249},
+  number = {5},
+  doi = {10.1021/acs.jctc.6b00092}
+}
+
+@ARTICLE{JCTC_2017_ISDF,
+  author = {Wei Hu and Lin Lin and Chao Yang},
+  title = {Interpolative Separable Density Fitting Decomposition for Accelerating Hybrid Density Functional Calculations With Applications to Defects in Silicon},
+  journal = {J. Chem. Theory Comput.},
+  year = {2017},
+  volume = {accepted},
+  pages = {},
+  number = {},
+  doi = {10.1021/acs.jctc.7b00807}
+}
+
+@ARTICLE{JCTC_2017_PCDIIS,
+  author = {Wei Hu and Lin Lin and Chao Yang},
+  title = {Projected Commutator DIIS Method for Accelerating Hybrid Functional Electronic Structure Calculations},
+  journal = {J. Chem. Theory Comput.},
+  year = {2017},
+  volume = {accepted},
+  pages = {},
+  number = {},
+  doi = {10.1021/acs.jctc.7b00892}
+}
+
+@Article{KochSanchezdePedersen2003,
+  author  = {Koch, H. and S{\'a}nchez de Mer{\'a}s, A. and Pedersen, T. B.},
+  title   = {Reduced scaling in electronic structure calculations using Cholesky decompositions},
+  journal = {J. Chem. Phys.},
+  year    = {2003},
+  volume  = {118},
+  pages   = {9481--9484},
+}
+
+@ARTICLE{LinXuYing2017,
+  author = {Lin, L. and Xu, Z. and Ying, L.},
+  title = {Adaptively Compressed Polarizability Operator for Accelerating Large
+  Scale Ab Initio Phonon Calculations},
+  journal = {Multiscale Model. Simul.},
+  year = {2017},
+  volume = {15},
+  pages = {29--55}
+}
+
+@article{lloyd1982least,
+  title={Least squares quantization in PCM},
+  author={Lloyd, Stuart},
+  journal={IEEE transactions on information theory},
+  volume={28},
+  number={2},
+  pages={129--137},
+  year={1982},
+  publisher={IEEE}
+}
+
+@Article{LuThicke2017,
+  author  = {J. Lu and K. Thicke},
+  title   = {{Cubic scaling algorithms for RPA correlation using interpolative separable density fitting}},
+  journal = {J. Comput. Phys.},
+  year    = {2017},
+  volume  = {351},
+  pages   = {187 - 202},
+}
+
+@INPROCEEDINGS{MacQueen1967,
+  author = {MacQueen, J.},
+  title = {Some methods for classification and analysis of multivariate observations},
+  booktitle = {Proc. of the Fifth Berkeley Symp. On Math. Stat. and Prob.},
+  year = {1967},
+  volume = {1},
+  pages = {281--297}
+}
+
+@ARTICLE{ManzerHornMardirossianEtAl2015,
+  author = {Manzer, S. and Horn, P. R. and Mardirossian, N. and Head-Gordon,
+  M.},
+  title = {{Fast, accurate evaluation of exact exchange: The occ-RI-K algorithm}},
+  journal = {J. Chem. Phys.},
+  year = {2015},
+  volume = {143},
+  pages = {024113},
+  number = {2}
+}
+
+@BOOK{Martin2004,
+  title = {Electronic Structure -- Basic Theory and Practical Methods},
+  publisher = {Cambridge Univ. Pr.},
+  year = {2004},
+  author = {R. Martin},
+  address = {West Nyack, {NY}}
+}
+
+@article{medvedev1986algorithm,
+  title={The algorithm for three-dimensional Voronoi polyhedra},
+  author={Medvedev, NN},
+  journal={Journal of computational physics},
+  volume={67},
+  number={1},
+  pages={223--229},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@ARTICLE{MurphyJCP1995,
+  author = {R. B. Murphy and M. D. Beachy and R. A. Friesner and M. N. Ringnalda},
+  title = {Pseudospectral localized M{\o}ller–Plesset methods: Theory and calculation of conformational energies},
+  journal = {J. Chem. Phys.},
+  year = {1995},
+  volume = {103},
+  pages = {1481}
+}
+
+@ARTICLE{NJP_14_053020_2012,
+  author = {X. Ren and P. Rinke and V. Blum and J. Wieferink and A. Tkatchenko and A. Sanfilippo and K. Reuter and M. Scheffler},
+  title = {Resolution-of-Identity Approach to {Hartree-Fock}, Hybrid Density Functionals, {RPA}, {MP2} and {GW} with Numeric Atom-Centered Orbital Basis Functions},
+  journal = {New J. Phys.},
+  year = {2012},
+  volume = {14},
+  pages = {053020}
+}
+
+@article{ogniewicz1995hierarchic,
+  title={Hierarchic voronoi skeletons},
+  author={Ogniewicz, Robert L and K{\"u}bler, Olaf},
+  journal={Pattern recognition},
+  volume={28},
+  number={3},
+  pages={343--359},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@ARTICLE{ParrishHohensteinMartinezEtAl2012,
+  author = {Parrish, R. M. and Hohenstein, E. G. and Mart{\'\i}nez, T. J. and
+  Sherrill, C. D.},
+  title = {{Tensor hypercontraction. II. Least-squares renormalization}},
+  journal = {J. Chem. Phys.},
+  year = {2012},
+  volume = {137},
+  pages = {224106}
+}
+@ARTICLE{ParrishHohensteinMartinezEtAl2013,
+  author = {Parrish, R. M. and Hohenstein, E. G. and Mart{\'\i}nez, T. J. and
+  Sherrill, C. D.},
+  title = {Discrete variable representation in electronic structure theory: Quadrature grids for least-squares tensor hypercontraction},
+  journal = {J. Chem. Phys.},
+  year = {2013},
+  volume = {138},
+  pages = {194107}
+}
+
+@ARTICLE{PCCP_17_31397_2015_DGDFT,
+  author = {W. Hu and L. Lin and C. Yang},
+  title = {Edge Reconstruction in Armchair Phosphorene Nanoribbons Revealed
+  by Discontinuous Galerkin Density Functional Theory},
+  journal = {Phys. Chem. Chem. Phys.},
+  year = {2015},
+  volume = {17},
+  pages = {31397--31404},
+  number = {47},
+  doi = {10.1039/C5CP00333D}
+}
+
+@ARTICLE{PRA_31_1695_1985_Hoover,
+  author = {W. G. Hoover},
+  title = {Canonical Dynamics: Equilibrium Phase-Space Distributions},
+  journal = {Phys. Rev. A},
+  year = {1985},
+  volume = {31},
+  pages = {1695},
+  doi = {10.1103/PhysRevA.31.1695}
+}
+
+@ARTICLE{PRB_58_3641_1998_HGH,
+  author = {C. Hartwigsen and S. Goedecker and J. Hutter},
+  title = {Relativistic Separable Dual-Space Gaussian Pseudopotentials from
+  {H to Rn}},
+  journal = {Phys. Rev. B},
+  year = {1998},
+  volume = {58},
+  pages = {3641},
+  doi = {10.1103/PhysRevB.58.3641}
+}
+
+@ARTICLE{PRL_102_073005_2009,
+  author = {A. Tkatchenko and M. Scheffler},
+  title = {Accurate Molecular Van Der Waals Interactions from Ground-State Electron Density and Free-Atom Reference Data},
+  journal = {Phys. Rev. Lett.},
+  year = {2009},
+  volume = {102},
+  pages = {073005}
+}
+
+@ARTICLE{ReynoldsJCP1996,
+  author = {G. Reynolds and T. J. Martinez and E. A. Carter},
+  title = {Local weak pairs spectral and pseudospectral singles and doubles configuration interaction},
+  journal = {J. Chem. Phys.},
+  year = {1996},
+  volume = {105},
+  pages = {6455}
+}
+
+@ARTICLE{RPP_75_036503_2010_ON,
+  author = {D. R. Bowler and T. Miyazaki},
+  title = {O(N) methods in Electronic Structure Calculations},
+  journal = {Rep. Prog. Phys.},
+  year = {2012},
+  volume = {75},
+  pages = {036503},
+  doi = {doi:10.1088/0034-4885/75/3/036503}
+}
+
+@ARTICLE{SIAM_13_727_1992_QRCP,
+  author = {T. F. Chan and P. C. Hansen},
+  title = {Some Applications of the Rank Revealing {QR} Factorization},
+  journal = {SIAM J. Sci. Statist. Comput.},
+  year = {1992},
+  volume = {13},
+  pages = {727--741}
+}
+
+@BOOK{SzaboOstlund1989,
+  title = {{Modern Quantum Chemistry: Introduction to Advanced Electronic Structure
+  Theory}},
+  publisher = {McGraw-Hill, New York},
+  year = {1989},
+  author = {Szabo, A. and Ostlund, N.S.}
+}
+
+@ARTICLE{Weigend2002,
+  author = {Weigend, F.},
+  title = {A fully direct {RI-HF} algorithm: Implementation, optimised auxiliary
+  basis sets, demonstration of accuracy and efficiency},
+  journal = {Phys. Chem. Chem. Phys.},
+  year = {2002},
+  volume = {4},
+  pages = {4285--4291}
 }
