--- a/Thesis.tex
+++ b/Thesis.tex
@@ -120,9 +120,7 @@
 \makecopyright
 
 \begin{abstract}
-Your abstract goes here. Make sure it sits inside the brackets. If not,
-your biosketch page may not be roman numeral iii, as required by the
-graduate school.
+	\input{abstract}
 \end{abstract}
 
 \begin{biosketch}
