--- a/notation.tex
+++ b/notation.tex
@@ -64,9 +64,9 @@
 \newcommand{\binsubset}{\mathbin{\subset}}
 \newcommand{\Colon}{\mathbin{:}}
 \newcommand{\Geq}{\mathbin{\geq}}
-\newcommand{\Leq}{\mathrel{\leq}}
+\newcommand{\Leq}{\mathbin{\leq}}
 \newcommand{\Sim}{\mathbin{\sim}}
-\newcommand{\Times}{\mathrel{\times}}
+\newcommand{\Times}{\mathbin{\times}}
 \newcommand{\To}{\mathbin{\to}}
 
 % Math Calligraphy
