--- a/Thesis.tex
+++ b/Thesis.tex
@@ -132,7 +132,7 @@ This document is dedicated to my parents and wife.
 \end{dedication}
 
 \begin{acknowledgements}
-Your acknowledgements go here. Make sure it sits inside the brackets.
+	\input{acknowledgements}
 \end{acknowledgements}
 
 \contentspage
