--- a/cvt.tex
+++ b/cvt.tex
@@ -17,6 +17,7 @@
 
 \section{Conclusion}\label{cvtsec:con}
 	\input{./cvt/conclusion}
-
-\section{Acknowledgments}\label{cvtsec:ack}
-	\input{./cvt/acknowledgments}
+	
+\vfill
+% \section{Acknowledgments}\label{cvtsec:ack}
+\noindent\textbf{Acknowledgments.} \input{./cvt/acknowledgments}
